--- a/W7D2/99_cats_helpers_layouts_partials/app/views/cats/_form.html.erb
+++ b/W7D2/99_cats_helpers_layouts_partials/app/views/cats/_form.html.erb
@@ -3,10 +3,7 @@
 
 <form action="<%= action %>" method="post">
   <input type="hidden" name="_method" value="<%= method %>">
-  <input
-    type="hidden"
-    name="authenticity_token"
-    value="<%= form_authenticity_token %>">
+  <%= auth_token %>
 
   <label for="cat_name">Name</label>
   <input
@@ -62,3 +59,7 @@
   <% submit_text = (cat.persisted? ? 'Update' : 'Create') + ' cat!' %>
   <input type="submit" value="<%= submit_text %>">
 </form>
+
+<% content_for :footer do %>
+  <p>congrats you're on the form page!</p>
+<% end %>
