--- a/W7D2/99_cats_helpers_layouts_partials/app/views/cats/edit.html.erb
+++ b/W7D2/99_cats_helpers_layouts_partials/app/views/cats/edit.html.erb
@@ -3,3 +3,7 @@
   <%= render 'shared/errors' %>
   <%= render 'form', cat: @cat %>
 </div></section>
+
+<% content_for :footer do %>
+  <p>congrats you're on the edit page!</p>
+<% end %>
