--- a/W7D2/99_cats_helpers_layouts_partials/app/views/layouts/application.html.erb
+++ b/W7D2/99_cats_helpers_layouts_partials/app/views/layouts/application.html.erb
@@ -20,10 +20,7 @@
     <% else %>
       <%= current_user.username %>
       <form action="<%= session_url %>" method="post">
-        <input
-          type="hidden"
-          name="authenticity_token"
-          value="<%= form_authenticity_token %>">
+        <%= auth_token %>
         <input type="hidden" name="_method" value="delete">
         <input type="submit" value="Logout">
       </form>
@@ -33,5 +30,9 @@
     <main>
       <%= yield %>
     </main>
+    <footer>
+      <p>This website is a very nice site about 99 cats.</p>
+      <%= yield :footer %>
+    </footer>
   </body>
 </html>
