--- a/W7D4/positioning_and_media_queries/assets/positioning_media_queries.css
+++ b/W7D4/positioning_and_media_queries/assets/positioning_media_queries.css
@@ -114,3 +114,44 @@ label {
 /* Code Goes Here */
 }
 
+.hamburger-dropdown {
+  display: none;
+}
+
+nav > ul {
+  display: none;
+}
+
+.hamburger-dropdown {
+  display: block;
+}
+
+.hamburger-dropdown > li {
+  background: url(assets/hamburger.png);
+  background-size: 50px 50px;
+}
+
+/* DROPDOWN */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/*  */
+
+.hamburger-dropdown:hover ul { 
+    display: block;
+ }
